--- a/MyTemplateClean.Application/MyTemplateClean.Application.csproj
+++ b/MyTemplateClean.Application/MyTemplateClean.Application.csproj
@@ -7,7 +7,19 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\MyTemplateClean.BuildingBlocks\MyTemplateClean.BuildingBlocks.csproj" />
       <ProjectReference Include="..\MyTemplateClean.Domain\MyTemplateClean.Domain.csproj" />
+      <ProjectReference Include="..\MyTemplateClean.Shared\MyTemplateClean.Shared.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Todos\EventHandlers\Domain\" />
+      <Folder Include="Todos\EventHandlers\Integration\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="12.1.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.1" />
     </ItemGroup>
 
 </Project>
