--- a/MyTemplateClean.BuildingBlocks/MyTemplateClean.BuildingBlocks.csproj
+++ b/MyTemplateClean.BuildingBlocks/MyTemplateClean.BuildingBlocks.csproj
@@ -7,9 +7,19 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Behaviors\" />
       <Folder Include="Exceptions\" />
-      <Folder Include="CQRS\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="12.1.1" />
+      <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
+      <PackageReference Include="Mediator.Abstractions" Version="3.0.1" />
+      <PackageReference Include="Mediator.SourceGenerator" Version="3.0.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="4.4.0" />
     </ItemGroup>
 
 </Project>
