--- a/MyTemplateClean.Api/MyTemplateClean.Api.csproj
+++ b/MyTemplateClean.Api/MyTemplateClean.Api.csproj
@@ -10,4 +10,9 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\MyTemplateClean.Application\MyTemplateClean.Application.csproj" />
+      <ProjectReference Include="..\MyTemplateClean.Infrastructure\MyTemplateClean.Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
