--- a/MyTemplateClean.Infrastructure/MyTemplateClean.Infrastructure.csproj
+++ b/MyTemplateClean.Infrastructure/MyTemplateClean.Infrastructure.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\MyTemplateClean.Application\MyTemplateClean.Application.csproj" />
+    </ItemGroup>
+
 </Project>
