--- a/MyTemplateClean.Infrastructure/MyTemplateClean.Infrastructure.csproj
+++ b/MyTemplateClean.Infrastructure/MyTemplateClean.Infrastructure.csproj
@@ -10,4 +10,13 @@
       <ProjectReference Include="..\MyTemplateClean.Application\MyTemplateClean.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
