--- a/MyTemplateClean.BuildingBlocks/MyTemplateClean.BuildingBlocks.csproj
+++ b/MyTemplateClean.BuildingBlocks/MyTemplateClean.BuildingBlocks.csproj
@@ -7,10 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Exceptions\" />
-    </ItemGroup>
-
-    <ItemGroup>
+      <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.1" />
       <PackageReference Include="FluentValidation" Version="12.1.1" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
@@ -19,7 +16,9 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1" />
       <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="4.4.0" />
+      <PackageReference Include="Scalar.AspNetCore" Version="2.11.10" />
     </ItemGroup>
 
 </Project>
