feat: added message broker with using Masstransit library

--- a/MyTemplateClean.Api/appsettings.json
+++ b/MyTemplateClean.Api/appsettings.json
@@ -1,9 +1,22 @@
 {
+  "ConnectionStrings": {
+    "Database": "Server=localhost;Database=TodoDb;User Id=sa;Password=Password123!;Encrypt=False;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "OpenApi": {
+    "Endpoint": {
+      "Name": "My API"
+    }
+  },
+  "MessageBroker": {
+    "Host": "amqp://localhost:5672",
+    "UserName": "guest",
+    "Password": "guest"
   },
   "AllowedHosts": "*"
 }
