--- a/MyTemplateClean.Api/appsettings.Development.json
+++ b/MyTemplateClean.Api/appsettings.Development.json
@@ -1,8 +1,21 @@
 {
+  "ConnectionStrings": {
+    "Database": "Server=localhost;Database=TodoDb;User Id=sa;Password=Password123!;Encrypt=False;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "MessageBroker": {
+    "Host": "amqp://localhost:5672",
+    "UserName": "guest",
+    "Password": "guest"
+  },
+  "OpenApi": {
+    "Endpoint": {
+      "Name": "My API"
     }
   }
 }
